addenda // arcane aura set bonus status effect